force-app/main/default/objects/CustomerReview__c/CustomerReview__c.object-meta.xml
<CustomObject>
    <label>Reseña RRSS</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Código Reseña</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reseñas RRSS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>