force-app/main/default/objects/CustomerReview__c/fields/ClientAccount__c.field-meta.xml
<CustomField>
    <fullName>ClientAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account, Persona Jurídica, Tercero, Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseñas RRSS</relationshipLabel>
    <relationshipName>Opiniones</relationshipName>
    <type>Lookup</type>
</CustomField>