force-app/main/default/objects/CustomerReview__c/fields/ExternalIdReply__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdReply__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External ID Respuesta</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>