force-app/main/default/objects/CustomerReview__c/fields/ExternalIDReview__c.field-meta.xml
<CustomField>
    <fullName>ExternalIDReview__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External ID Reseña</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>