force-app/main/default/objects/CustomerReview__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Origen Reseña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SocialNetworks</valueSetName>
    </valueSet>
</CustomField>