force-app/main/default/objects/CustomerReview__c/fields/ReplyText__c.field-meta.xml
<CustomField>
    <fullName>ReplyText__c</fullName>
    <label>Respuesta AA</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>