force-app/main/default/objects/CustomerReview__c/fields/ReviewText__c.field-meta.xml
<CustomField>
    <fullName>ReviewText__c</fullName>
    <label>Reseña Cliente</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>