force-app/main/default/objects/CustomerReview__c/fields/ReviewTitle__c.field-meta.xml
<CustomField>
    <fullName>ReviewTitle__c</fullName>
    <label>Título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>