force-app/main/default/objects/CustomerReview__c/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <label>Estrellas</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>