force-app/main/default/objects/CustomerReview__c/fields/StarsFormula__c.field-meta.xml
<CustomField>
    <fullName>StarsFormula__c</fullName>
    <formula>CASE( Stars__c ,
    5, IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5&quot;),
    4, IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4&quot;),
    3, IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3&quot;),
    2, IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;2&quot;),
    1, IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;1&quot;),
    IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;0&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estrellas</label>
    <type>Text</type>
</CustomField>