force-app/main/default/objects/CustomerReview__c/fields/ToProcess__c.field-meta.xml
<CustomField>
    <fullName>ToProcess__c</fullName>
    <defaultValue>true</defaultValue>
    <label>To Process</label>
    <type>Checkbox</type>
</CustomField>