force-app/main/default/objects/CustomerReview__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>Email Reseña</label>
    <type>Email</type>
</CustomField>