force-app/main/default/objects/CustomerReview__c/fields/UserNickname__c.field-meta.xml
<CustomField>
    <fullName>UserNickname__c</fullName>
    <label>Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>