force-app/main/default/objects/CustomerReview__c/listViews/Pendientes_de_Responder.listView-meta.xml
<ListView>
    <fullName>Pendientes_de_Responder</fullName>
    <columns>NAME</columns>
    <columns>StarsFormula__c</columns>
    <columns>Platform__c</columns>
    <columns>ReviewTitle__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ToProcess__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pendientes de Responder</label>
</ListView>