force-app/main/default/objects/CustomerReview__c/listViews/Respondidas.listView-meta.xml
<ListView>
    <fullName>Respondidas</fullName>
    <columns>NAME</columns>
    <columns>StarsFormula__c</columns>
    <columns>Platform__c</columns>
    <columns>ReviewTitle__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ToProcess__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Respondidas</label>
</ListView>